--- a/Django/templates/application/list.html
+++ b/Django/templates/application/list.html
@@ -1,31 +1,31 @@
 {% extends 'index.html' %}
 
 {% block title %}
-Доски
+Дошки
 {% endblock %}
 
 {% block content %}
     <div class="intro">
     <div class="row_container">
         <div class="boardsC1">
-            <h1 class="board_name">Темы</h1>
+            <h1 class="board_name">Теми</h1>
             <div class="board_list">
-                <a class="board" href={% url 'application:board' 'conv' %}>Общение</a>
-                <a class="board" href={% url 'application:board' 'memes' %}>Мемы</a>
-                <a class="board" href={% url 'application:board' 'music' %}>Музыка</a>
-                <a class="board" href={% url 'application:board' 'games' %}>Игры</a>
+                <a class="board" href={% url 'application:board' 'conv' %}>Спілкування</a>
+                <a class="board" href={% url 'application:board' 'memes' %}>Меми</a>
+                <a class="board" href={% url 'application:board' 'music' %}>Музика</a>
+                <a class="board" href={% url 'application:board' 'games' %}>Ігри</a>
                 <a class="board" href={% url 'application:board' 'it' %}>IT</a>
-                <a class="board" href={% url 'application:board' 'search' %}>Бюро находок</a>
+                <a class="board" href={% url 'application:board' 'search' %}>Бюро знахідок</a>
                 <a class="board" href={% url 'application:board' 'sell' %}>Барахолка</a>
             </div>
         </div>
         <div class="boardsC2">
-            <h1 class="board_name">Факультеты</h1>
+            <h1 class="board_name">Факультети</h1>
             <div class="board_list2">
-                <a class="board" href="#">ФИВТ</a>
-                <a class="board2" href="#">ТЭФ</a>
+                <a class="board" href="#">ФІОТ</a>
+                <a class="board2" href="#">ТЕФ</a>
                 <a class="board3" href="#">ФСП</a>
-                <a class="board4" href="#">ФБМИ</a>
+                <a class="board4" href="#">ФБМІ</a>
                 <a class="board5" href="#">СУНФМ</a>
                 <a class="board6" href="#">ФПМ</a>
                 <a class="board7" href="#">ФММ</a>
@@ -33,26 +33,26 @@
                 <a class="board9" href="#">ФБТ</a>
                 <a class="board10" href="#">ХТФ</a>
                 <a class="board11" href="#">ФЛ</a>
-                <a class="board12" href="#">ФЭЛ</a>
-                <a class="board13" href="#">ФЭА</a>
+                <a class="board12" href="#">ФЕЛ</a>
+                <a class="board13" href="#">ФЕА</a>
                 <a class="board14" href="#">РТФ</a>
                 <a class="board15" href="#">ПСФ</a>
-                <a class="board16" href="#">ИХФ</a>
+                <a class="board16" href="#">ІХФ</a>
                 <a class="board17" href="#">ЗФ</a>
-                <a class="board18" href="#">ИФФ</a>
+                <a class="board18" href="#">ІФФ</a>
             </div>
         </div>
         <div class="boardsC3">
-            <h1 class="board_name">Институты</h1>
+            <h1 class="board_name">Інститути</h1>
             <div class="board_list">
-                <a class="board" href="#">ИПСА</a>
-                <a class="board" href="#">ИТС</a>
-                <a class="board" href="#">ВПИ</a>
-                <a class="board" href="#">ИАТ</a>
-                <a class="board" href="#">ИЭЭ</a>
-                <a class="board" href="#">ИССЗИ</a>
-                <a class="board" href="#">ММИ</a>
-                <a class="board" href="#">ФТИ</a>
+                <a class="board" href="#">ІПСА</a>
+                <a class="board" href="#">ІТС</a>
+                <a class="board" href="#">ВПІ</a>
+                <a class="board" href="#">ІАТ</a>
+                <a class="board" href="#">ІЕЕ</a>
+                <a class="board" href="#">ІССЗІ</a>
+                <a class="board" href="#">ММІ</a>
+                <a class="board" href="#">ФТІ</a>
             </div>
         </div>
     </div>
