--- a/Django/templates/application/board.html
+++ b/Django/templates/application/board.html
@@ -6,9 +6,9 @@
     <div class =board_intro>
     <div class = menubar>
     <form method="GET" action="" id="searchform" class="searchbar">
-        <input type="text" id="searchbar" name="search" placeholder="Поиск тредов" class=searchbar_form value="{{ Search }}" maxlength="50">
+        <input type="text" id="searchbar" name="search" placeholder="Пошук тредів" class=searchbar_form value="{{ Search }}" maxlength="50">
     </form>
-        <a href="#" class =create_thread>Создать тред</a>
+        <a href="#" class =create_thread>Створити тред</a>
         <div class=paginator>
         {% if Threads.has_previous %}
             <a class=pages href="?{% if Search %}search={{ Search }}&{% endif %}page=1"><</a>
@@ -33,7 +33,7 @@
                         <div class=thread_name>{{ i.short_ttl }}</div>
                         <div class=thread_text>{{ i.short }}</div>
                             {% if i.img == '0' %}
-                                <div class=thread_img_box>Нет изображения</div>
+                                <div class=thread_img_box>Немає зображення</div>
                             {% else %}
                                <div class=thread_img_box ><img src="{{ i.img.url }}" class=thread_img></div>
                             {% endif %}
@@ -42,7 +42,7 @@
 
                     {% endfor %}
                 {% else %}
-                    <div class=no_threads>Треды не найдены</div>
+                    <div class=no_threads>Треди не знайдені</div>
                 {% endif %}
         </div>
     </div>
